apps/base/test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: DAFFODIL.ad.slc.net:5000/dave-andrew/my-app:latest
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 3000
