apps/base/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
