apps/base/test-app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-httproute
spec:
  parentRefs:
  - name: traefik
    sectionName: web
    namespace: traefik
  hostnames:
  - test.kube.slc.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
