apps/base/test-app/httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-app-httpsroute
  labels:
    gateway: traefik
spec:
  parentRefs:
  - name: traefik
    sectionName: websecure
    namespace: traefik
  hostnames:
  - test.kube.slc.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: test-service
      port: 3000
